tests/baselines/reference/noImplicitAnyParametersInAmbientModule.errors.txt
==== tests/cases/compiler/noImplicitAnyParametersInAmbientModule.ts (22 errors) ====
    
    declare module D_M {
        // No implicit-'any' errors.
        function dm_f1(): void;
    
        // No implicit-'any' errors.
        function dm_f2(x): void;
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        function dm_f3(x: any): void;
    
        // No implicit-'any' errors.
        function dm_f4(x, y, z): void;
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                          ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                             ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        function dm_f5(x, y: any, z): void;
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                                  ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        function dm_f6(...r): void;
                       ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // No implicit-'any' errors.
        function dm_f7(x, ...r): void;
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                          ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // No implicit-'any' errors.
        function dm_f8(x1, y1: number): any;
                       ~~
!!! error TS7006: Parameter 'x1' implicitly has an 'any' type.
        function dm_f8(x2: string, y2): any;
                                   ~~
!!! error TS7006: Parameter 'y2' implicitly has an 'any' type.
        function dm_f8(x3, y3): any;
                       ~~
!!! error TS7006: Parameter 'x3' implicitly has an 'any' type.
                           ~~
!!! error TS7006: Parameter 'y3' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        var dm_f9: () => string;
    
        // No implicit-'any' errors.
        var dm_f10: (x) => string;
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        var dm_f11: (x, y, z) => string;
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                        ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                           ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        var dm_f12: (x, y: any, z) => string;
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                                ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        var dm_f13: (...r) => string;
                     ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // No implicit-'any' errors.
        var dm_f14: (x, ...r) => string;
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                        ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    }